fix scrollbar

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -122,13 +122,13 @@ $menu-label-color: $white-ter
   flex-basis: 35%
   margin: 0 1.5em 0 0
 
-// fix scrollbar behaviour
-.tl-edges
-  overflow: hidden
 
-  
+
 @import "~bulma"
 
+// fix scrollbar behaviour
+.tl-edges
+  overflow-x: unset
 
 // responsiveness
 +tablet-only
